@@ -42,7 +42,10 @@
 <b>Bug Fix:</b> Placeholders: Move Site, Copy Site, Make Alias, and Remove Alias actions are now logged. (<em>2008-10-14 - Adam Franco</em>)</li>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=2166913&amp;group_id=82171&amp;atid=565234">
-        			#2166913</a> Tagging: Fixed file path in tag actions to point at new plugins-dist directory. (<em>2008-10-15 - Adam Franco</em>)</li>
+        			#2166913</a> Tagging: Fixed file path in tag actions to point at new plugins-dist directory. (<em>2008-10-15 - Adam Franco</em>)<br> (<em>reported by alex_chapin</em>)</li>
+		<li>
+<b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=2114311&amp;group_id=82171&amp;atid=565234">
+        			#2114311</a> Attribution: Straightened out attribution printing so that authors could be shown without dates. (<em>2008-10-15 - Adam Franco</em>)<br> (<em>reported by alex_chapin</em>)</li>
 	</ul>
 <br><h2>Version 2.2.5.1</h2>
 <h3>2008-10-14</h3>
