@@ -36,8 +36,12 @@
 			Placeholders: Move Site, Copy Site, Make Alias, and Remove Alias actions
 			are now logged.
 		</fix>
-		<fix author='adam' date='2008-10-15' ref='2166913' reftype='bug'>
+		<fix author='adam' date='2008-10-15' ref='2166913' reftype='bug' reporter='alex_chapin'>
 			Tagging: Fixed file path in tag actions to point at new plugins-dist directory.
+		</fix>
+		<fix author='adam' date='2008-10-15' ref='2114311' reftype='bug' reporter='alex_chapin'>
+			Attribution: Straightened out attribution printing so that authors could 
+			be shown without dates.
 		</fix>
 	</version>
 	<version number="2.2.5.1" date="2008-10-14">
